--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" class=" dark:bg-black transition-all ease-in-out"></div>
 </body>
 
 </html>
