--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
   <title>Tasks</title>
 </head>
 
-<body>
+<body class=" dark:bg-black transition-all ease-in-out">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" class=" dark:bg-black transition-all ease-in-out"></div>
+  <div id="root"></div>
 </body>
 
 </html>
