--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <title>Tasks</title>
 </head>
 
-<body class=" dark:bg-black transition-all ease-in-out">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
